# marbles

./: .gitignore  Cargo.toml  README.md  go.mod
cmd/: main.go
node/: Cargo.toml
node/src/: lib.rs
node/src/field/: m_field.rs
pkg/node/: node.go
pkg/node/types/: marble_type.go
pkg/property/: field.go  property.go
src/: CMakeLists.txt  main.cpp  main.rs
src/graph/: CMakeLists.txt  graph.cpp
src/graph_service/: CMakeLists.txt  graph_service.cpp
src/include/: graph.h  graph_service.h  node.h  parser.h
src/node/: CMakeLists.txt  node.cpp
src/parser/: CMakeLists.txt  parser.cpp
types/: Cargo.toml
types/src/: lib.rs  m_type.rs
types/src/bool/: m_bool.rs
types/src/integer/: constraint.rs  m_integer.rs
types/src/string/: m_string.rs
